# vegetarian-recipes

./: .gitignore  .gitmodules  docker-compose.yml
data/config/: jvm.options
docker/php/: Dockerfile  README.md  virtualhost.conf
ingest/: dependency-reduced-pom.xml  pom.xml
ingest/src/main/java/fr/vegetarian/recipes/: Ingest.java
ingest/src/main/java/fr/vegetarian/recipes/config/: CacheConfig.java  Config.java  ConfigLoader.java  DatasetConfig.java  EdamamApiConfig.java  ElasticsearchConfig.java
ingest/src/main/java/fr/vegetarian/recipes/data/: RecipeData.java  RecipeDataset.java
ingest/src/main/resources/: config.example.json  log4j2.xml  recipe_mapping.json
learn/: CMakeLists.txt
learn/src/: main.cpp
learn/src/SOM/: Neuron.cpp  Neuron.h  Som.cpp  Som.h  SomEvaluation.cpp  SomEvaluation.h  SomTrainingParameter.cpp  SomTrainingParameter.h
learn/src/elasticsearch/: RecipeClient.cpp  RecipeClient.h
learn/src/statistics/: Stat.cpp  Stat.h
learn/src/transform/: Filter.h  Reducer.h  ReducerOnQuantileValue.h  SampleFilterMedianOutlierDetection.h  TransformFunctor.cpp  TransformFunctor.h
visualize/: composer.json
visualize/src/: dependencies.php  routes.php  settings.php
visualize/templates/: index.phtml
visualize/vuejs/: package.json
visualize/vuejs/config/: index.js
visualize/vuejs/src/: App.vue  main.js
visualize/vuejs/src/components/: IngredientChart.vue  RecipeList.vue  Som.vue
visualize/www/: index.php
visualize/www/static/css/: app.css  app.css.map
visualize/www/static/js/: app.js
(+16 files in other folders)
